--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "express": "^4.18.2",
     "@shopify/shopify-api": "^9.0.0",
     "redis": "^4.6.0",
